[gd_scene load_steps=35 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://graphics/bg/far.png" type="Texture" id=2]
[ext_resource path="res://graphics/bg/foreground-2.png" type="Texture" id=3]
[ext_resource path="res://graphics/bg/foreground-1.png" type="Texture" id=4]
[ext_resource path="res://water_shader.tres" type="Material" id=5]
[ext_resource path="res://Dolphin.tscn" type="PackedScene" id=6]
[ext_resource path="res://graphics/bg/sand.png" type="Texture" id=7]
[ext_resource path="res://ocean.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://graphics/shell-closed.png" type="Texture" id=9]
[ext_resource path="res://graphics/shell-open.png" type="Texture" id=10]
[ext_resource path="res://sounds/mixkit-deep-water-bubbles-1321.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/mixkit-liquid-bubble-3000.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/mixkit-ocean-game-movement-water-air-tank-bubbles-huge-long-3017.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/mixkit-video-game-magic-potion-2830.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/Underwater-Ambient-Pad-isaiah658.ogg" type="AudioStream" id=15]
[ext_resource path="res://sounds/bubbles-single1.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/bubbles-single2.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/bubbles-single3.wav" type="AudioStream" id=18]
[ext_resource path="res://graphics/bg.png" type="Texture" id=19]
[ext_resource path="res://graphics/speck.png" type="Texture" id=20]
[ext_resource path="res://graphics/audioOn.png" type="Texture" id=21]
[ext_resource path="res://graphics/contrast.png" type="Texture" id=22]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.507389, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 300, 1, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -20, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 15.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 15.0
linear_accel_random = 1.0
tangential_accel = 8.0
tangential_accel_random = 1.0
damping = 15.0
damping_random = 1.0
scale = 0.15
scale_random = 1.0
color = Color( 0, 0.796078, 0.388235, 0.239216 )
color_ramp = SubResource( 10 )
hue_variation = 1.0
hue_variation_random = 1.0

[sub_resource type="CircleShape2D" id=6]
radius = 50.0

[sub_resource type="CircleShape2D" id=3]
radius = 60.0

[sub_resource type="CircleShape2D" id=4]
radius = 60.0

[sub_resource type="CircleShape2D" id=5]
radius = 60.0

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 32
extra_spacing_char = 5
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Affirmation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Affirmation:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 29, 256 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "affirm"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Affirmation:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Affirmation:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 0, 256 ), Vector2( 0, 223 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "hide_affirm"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Affirmation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 167, 512 )
amount = 128
lifetime = 30.0
preprocess = 60.0
randomness = 0.7
process_material = SubResource( 8 )
texture = ExtResource( 20 )

[node name="BG" type="ParallaxBackground" parent="."]
layer = -1

[node name="ColorRect2" type="TextureRect" parent="BG"]
margin_left = -17.0
margin_top = -265.0
margin_right = 361.0
margin_bottom = 503.0
mouse_filter = 2
texture = ExtResource( 19 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG1" type="ParallaxLayer" parent="BG"]
position = Vector2( 151, 371 )
scale = Vector2( 1.5, 1.5 )
motion_scale = Vector2( 0.1, 1 )
motion_offset = Vector2( 0, -100 )

[node name="Sprite" type="Sprite" parent="BG/BG1"]
texture = ExtResource( 2 )

[node name="BG4" type="ParallaxLayer" parent="BG"]
position = Vector2( 151, 371 )
scale = Vector2( 1.5, 1.5 )
motion_offset = Vector2( -50, -50 )
motion_mirroring = Vector2( 256, 0 )

[node name="Sprite" type="Sprite" parent="BG/BG4"]
texture = ExtResource( 7 )

[node name="BG2" type="ParallaxLayer" parent="BG"]
position = Vector2( 151, 371 )
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="BG/BG2"]
texture = ExtResource( 4 )

[node name="BG3" type="ParallaxLayer" parent="BG"]
position = Vector2( 151, 371 )
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="BG/BG3"]
texture = ExtResource( 3 )

[node name="ColorRect3" type="ColorRect" parent="."]
material = ExtResource( 5 )
margin_left = -41.0
margin_top = -47.0
margin_right = 342.0
margin_bottom = 513.0
mouse_filter = 1
color = Color( 0, 0.0627451, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fish" type="Node2D" parent="."]

[node name="Detector" type="Area2D" parent="."]
position = Vector2( 150, 73 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 6 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 150, 256 )

[node name="Position2D" type="Position2D" parent="Pivot"]
position = Vector2( 0, -182 )

[node name="Dolphin" parent="Pivot/Position2D" instance=ExtResource( 6 )]

[node name="LeftSpawns" type="Node2D" parent="."]
position = Vector2( 0, 38 )

[node name="Position2D" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 0 )

[node name="Position2D6" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 45 )

[node name="Position2D7" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 144 )

[node name="Position2D8" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 241 )

[node name="Position2D9" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 347 )

[node name="Position2D10" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 446 )

[node name="Position2D2" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 101 )

[node name="Position2D3" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 191 )

[node name="Position2D4" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 294 )

[node name="Position2D5" type="Position2D" parent="LeftSpawns"]
position = Vector2( -112, 398 )

[node name="RightSpawns" type="Node2D" parent="."]
position = Vector2( 548, 20 )

[node name="Position2D" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 0 )

[node name="Position2D6" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 49 )

[node name="Position2D7" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 144 )

[node name="Position2D8" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 244 )

[node name="Position2D9" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 348 )

[node name="Position2D10" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 455 )

[node name="Position2D2" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 101 )

[node name="Position2D3" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 191 )

[node name="Position2D4" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 294 )

[node name="Position2D5" type="Position2D" parent="RightSpawns"]
position = Vector2( -112, 398 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 359, 259 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
shape = SubResource( 3 )

[node name="Entrance" type="Area2D" parent="."]
position = Vector2( -65, 265 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance"]
shape = SubResource( 4 )

[node name="ChangeSpeed" type="Area2D" parent="."]
position = Vector2( 150, 522 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeSpeed"]
shape = SubResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 109.0
margin_top = 329.0
margin_right = 192.0
margin_bottom = 411.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = 475.0
margin_right = 325.0
margin_bottom = 511.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomSpawns" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="BottomSpawns"]
position = Vector2( -8, 556 )

[node name="Position2D2" type="Position2D" parent="BottomSpawns"]
position = Vector2( 46, 556 )

[node name="Position2D3" type="Position2D" parent="BottomSpawns"]
position = Vector2( 96, 556 )

[node name="Position2D4" type="Position2D" parent="BottomSpawns"]
position = Vector2( 142, 556 )

[node name="Position2D5" type="Position2D" parent="BottomSpawns"]
position = Vector2( 190, 556 )

[node name="Position2D6" type="Position2D" parent="BottomSpawns"]
position = Vector2( 242, 556 )

[node name="Position2D7" type="Position2D" parent="BottomSpawns"]
position = Vector2( 298, 556 )

[node name="FishTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="JellyfishTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BubbleTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Sounds" type="Node" parent="."]

[node name="Bubble1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="Bubble2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -5.0

[node name="Bubble3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -5.0

[node name="Bubble4" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )
volume_db = -5.0

[node name="Bubble5" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )
volume_db = -5.0

[node name="Bubble6" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )
volume_db = -5.0

[node name="Chime" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -5.0

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
autoplay = true

[node name="Affirmation" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 256.0
margin_right = 329.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 11 )
text = "Go to sleep"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AffirmationTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="AffirmationHideTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="NightMode" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.862745, 0.564706, 0.380392, 1 )

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.223529 )
margin_top = 472.0
margin_right = 300.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 232
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeButton" type="TextureButton" parent="Control/HBoxContainer"]
margin_left = 2.0
margin_right = 34.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 21 )
expand = true
stretch_mode = 4

[node name="NightmodeButton" type="TextureButton" parent="Control/HBoxContainer"]
margin_left = 266.0
margin_right = 298.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 22 )
expand = true
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/affirm = SubResource( 12 )
anims/hide_affirm = SubResource( 14 )

[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_Detector_area_exited"]
[connection signal="area_entered" from="Exit" to="." method="_on_Exit_area_entered"]
[connection signal="area_entered" from="Entrance" to="." method="_on_Entrance_area_entered"]
[connection signal="area_entered" from="ChangeSpeed" to="." method="_on_ChangeSpeed_area_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="FishTimer" to="." method="_on_FishTimer_timeout"]
[connection signal="timeout" from="JellyfishTimer" to="." method="_on_JellyfishTimer_timeout"]
[connection signal="timeout" from="BubbleTimer" to="." method="_on_BubbleTimer_timeout"]
[connection signal="timeout" from="AffirmationTimer" to="." method="_on_AffirmationTimer_timeout"]
[connection signal="timeout" from="AffirmationHideTimer" to="." method="_on_AffirmationHideTimer_timeout"]
[connection signal="pressed" from="Control/HBoxContainer/VolumeButton" to="." method="_on_VolumeButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/NightmodeButton" to="." method="_on_NightmodeButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
